# m8m-amr-devel

./: README.md
AGV Program/: Transporter_Setup.txt  checkIPN.sh  checkNetworkLoop.sh  checkNetworkLoopprotoA.sh  checknet.sh  chkIP.sh  csm.txt  go.sh  master.sh  net.txt  nspace.sh  nyssetup.sh  recordbag.sh  remap.sh  rz.sh  shut.sh  st.sh
AGV Program/Documents/: linux_commands_26Jan21
AGV Program/Documents/EPOS_Linux_Library/: install.sh
AGV Program/Documents/Globotix/: move_node.cpp
AGV Program/Documents/rules.d/: 79-Hokuyo.rules  81-EPOS-RIGHT.rules
AGV Program/Documents/sqlite-amalgamation-3330000/: a.out
AGV Program/catkin_ws/devel/: local_setup.sh
AGV Program/catkin_ws/launch_7Sep21/: config.launch  hokuyo.launch  joystick.launch~  lasermatch.launch  motor_params_htbot.launch~  move_base_asr.launch  sick_tim_781S_ntuc.launch  socket.launch  turtle.launch~  turtlebot.launch~
AGV Program/etc/: ca-certificates.conf  ca-certificates.conf.dpkg-old  fstab  hosts  passwd
AGV Program/etc/alternatives/: blas.pc  composite  conjure  convert  futurize  hdf5.pc  mpiexec  rcp  stream  w
AGV Program/etc/apt/: sources.list  sources.list.save
AGV Program/etc/init.d/: .depend.start
AGV Program/www/: develop.html  navigate.html
AGV Program/www_globotix/: auto.html  mainmenu.html  manual.html  markP_ready.html  setting.html  startpoint.html
Reference Code/AGV Program/: buzz.sh  buzzend.sh  checkIP.sh  globotix.txt  ntuc.sh  offallsound.sh  protoAMap.sh  readme.txt  reconnect.sh  ssmcend.sh  startRAC1.sh  stopx.sh  sysBackup.sh  sysBackup_Clear.sh  testcam.sh  tstartup1.sh  tstartup2.sh  wifichk.sh
Reference Code/TP AGV Program/: Download  LeadAcidVoltageChargeRelationship.txt  Link to checkret.txt  RosNode.txt  agv.sh  agvend.sh  checkAplay.sh  checkIPA.sh  ck.sh  dellog.sh  globotix.sh  globotix_design.txt  goend.sh  killrosbag.sh  pid.txt  play.sh  protoAStart.sh  rosbagmap.sh  rtl8812au.txt  savemap.sh  ssmc.sh  stop.sh  stop5.sh  test.sh  test.txt  test2.txt  test3.txt  testnet.sh  tstartup.sh  wifichkx.sh
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/: CMakeLists.txt
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/laser/laser_14June19/: DOCK.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/laser/laser_17June19/: DOCK.json  STNT.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/laser/laser_18June19/: DOCK.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/laser/laser_19June19/: STN4.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/laser/laser_27June19/: STN1.json  STN3.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/laser/laser_28June19/: RefScan2.json  RefScan6.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/laser/laser_org/hall/: CNC.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/maps/maps_17June19/6June19/: docmap.pgm
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/maps/maps_18June19/: docmaptest.pgm
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/maps/maps_19June19/: docmap.yaml
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/Backup/maps/maps_28June19/: docmap4Jan19.pgm  docmap_obs.pgm  docmap_xx.pgm
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/cleanplanpath/: Changi-Airport-Terminal-1.txt  genericplan30B.txt  genericplan4.txt  genericplan9.txt  globotix_4Feb21B.txt  globotix_8Feb21_322pm.txt  globotix_org.txt
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/config/: base_local_planner_params_sick.yaml  costmap_common_params.yaml  depth.yaml  global_costmap_params.yaml  local_costmap_params.yaml  multiLP1.yaml  shadow_RS.yaml
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/config/backup/: base_local_planner_params.yaml  local_costmap_params.yaml
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/config/good_24_2_2015/: local_costmap_params.yaml
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/include/htbot/: EPOS2.h~  bot2wheel_driver.h~  match_node.h
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/laser/: L1LRm3.json  LBLB.json  LBLD.json  LFL.json  LULB.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/laser/13Jan21/: STN5.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/laser/22Feb21/: STN3.json  STN6.json
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/launch/: RoboSense.launch  amcl.launch  config_14Oct20.launch  htbot_com.launch  htbot_nav_kyu.launch  htbot_service.launch~  htbot_start_mapzone.launch  joystick_ms.launch  laserlink_new.launch  laserlink_rac1_20Jan21.launch  machine.launch~  motor_params_htbot.launch  ntuc_map.launch  protoAMapping.launch  rosbridge_websocket.launch  sidelaser.launch  test_htbot.launch~  testsound.launch  transporter.launch~
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/maps/: docmap_22Feb21B.pgm  docmap_22Feb21C.pgm  docmap_org.pgm
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/maps/1Feb21/: docmap.pgm
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/msg/: Command.msg~  agv_status.msg  dyna.msg  motorcmd.msg  navstatus.msg  odom.msg  scanCmd.msg~  stat.msg
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/src/: EPOS2.cpp~  RefScan_node.cpp  amclpose_node.cpp  arduino_node.cpp  barcode.cpp~  barcode_node.cpp  bot_node.cpp~  button_node.cpp~  clearMap_node.cpp~  event_node.cpp  mapNode.cpp~  match_node.cpp  move_node.cpp~  move_node_3Mar21.cpp  multisick_node.cpp  navNode.cpp~  pgm.cpp  queue_node.cpp~  rfid.cpp  rfid2.cpp  sendgoal.cpp~  sendgoal_node_12Mar21.cpp  sideLaser_node.cpp~  srv_node.cpp~  start.cpp~  top_laser_bk.cpp  web_node.cpp  web_node_12Apr21.cpp  weblaser_node.cpp
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/srv/: dbcmd.srv~  mqueue.srv
Reference Code/TP AGV Program/Documents/NTUC/19Apr21/htbot/urdf/: htbotx.urdf.xacro  transporter.urdf.xacro~
(+1504 files in other folders)
